アントン・プリダトゴ TWのイベントの修正及びイベントタイトルの付与

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -210,10 +210,65 @@
  TR_Russia_TW.6.d: "$TEST_DESC$"
  TR_Russia_TW.6.a: "$TEST_BUTTON$"
 
- TR_Russia_TW.7.t: "[RebellousState.GetName]で守旧派が蜂起" #州ごとにイベントを作るのではなく、共通。#RebellousState:イベントターゲットの州
+ TR_Russia_TW.7.t: "[RebelState.GetName]で守旧派が蜂起" #州ごとにイベントを作るのではなく、共通。#RebelState:イベントターゲットの州
  TR_Russia_TW.7.d: "$TEST_DESC$"
  TR_Russia_TW.7.a: "$TEST_BUTTON$"
- TR_Russia_TW.18.t: "[RebellousState.GetName]で守旧派が反抗"
+ TR_Russia_TW.8.t: "バルト地域での守旧派たちの行動"
+ TR_Russia_TW.8.d: "$TEST_DESC$"
+ TR_Russia_TW.8.a: "奴らの遊びに付き合う暇は無い"
+ EST_LAT_STATES_WILL_TRANSFER: "§Rエストニア及びラトビアは守旧派叛乱に参加する!§!"
+ TR_Russia_TW.8.b: "警察活動を始めろ"
+ TR_Russia_TW.8.c: "親衛隊による強行手段で対応せよ"
+ TR_Russia_TW.9:t: "保たれた秩序"
+ TR_Russia_TW.9.d: "派遣した警察によって守旧派将校は捕縛され、ラトビアでの叛乱は未然に防がれた。"
+ TR_Russia_TW.9.a: "秩序は保たれた"
+ TR_Russia_TW.10.t: "忍び寄る影"
+ TR_Russia_TW.10.d: "ラトビアに派遣した警察は守旧派将校の手によって排除された。"
+ TR_Russia_TW.10.a: "なんということだ"
+ TR_Russia_TW.11.t: "保たれた秩序"
+ TR_Russia_TW.11.d: "バルト地域に派遣した親衛隊の活躍によりバルト地域での叛乱は未然に防がれた。"
+ TR_Russia_TW.11.a: "素晴らしい活躍だ"
+ TR_Russia_TW.12.t: "大規模な戦闘に発展"
+ TR_Russia_TW.12.d: "先日バルト地域に派遣された親衛隊と現地の守旧派との間で大規模な戦闘が発生した。"
+ TR_Russia_TW.12.a: "なんということだ"
+ TR_Russia_TW.13.t: "カレリア地域での守旧派たちの行動"
+ TR_Russia_TW.13.d: "$TEST_DESC$"
+ TR_Russia_TW.13.a: "奴らの遊びに付き合う暇は無い"
+ KAR_STATES_WILL_TRANSFER: "§Rカレリアは守旧派叛乱に参加する!§!"
+ TR_Russia_TW.13.b: "警察活動を始めろ"
+ TR_Russia_TW.13.c: "親衛隊による強行手段で対応せよ"
+ TR_Russia_TW.14:t: "保たれた秩序"
+ TR_Russia_TW.14.d: "派遣した警察によって守旧派将校は捕縛され、カレリアでの叛乱は未然に防がれた。"
+ TR_Russia_TW.14.a: "秩序は保たれた"
+ TR_Russia_TW.15.t: "忍び寄る影"
+ TR_Russia_TW.15.d: "カレリアに派遣した警察は守旧派将校の手によって排除された。"
+ TR_Russia_TW.15.a: "なんということだ"
+ TR_Russia_TW.16.t: "保たれた秩序"
+ TR_Russia_TW.16.d: "バルト地域に派遣した親衛隊の活躍によりカレリアでの叛乱は未然に防がれた。"
+ TR_Russia_TW.16.a: "素晴らしい活躍だ"
+ TR_Russia_TW.17.t: "大規模な戦闘に発展"
+ TR_Russia_TW.17.d: "先日カレリアに派遣された親衛隊と現地の守旧派との間で大規模な戦闘が発生した。"
+ TR_Russia_TW.17.a: "なんということだ"
+ TR_Russia_TW.18.t: "[RebelState.GetName]で守旧派が反抗" #州ごとにイベントを作るのではなく、共通。#RebelState:イベントターゲットの州
+ TR_Russia_TW.18.d: "[RebelState.GetName]にて守旧派が叛乱を起こすとの情報がの情報が手に入った。"
+ TR_Russia_TW.18.a: "警察活動を始めろ"
+ TR_Russia_TW.18.b: "親衛隊による強行手段で対応せよ"
+ TR_Russia_TW.19.t: "この地域の第五列を弾圧"
+ TR_Russia_TW.19.d: ""
+ TR_Russia_TW.19.a: "素晴らしい成果だ"
+ TR_Russia_TW.20.t: "過激化！"
+ TR_Russia_TW.20.d: ""
+ TR_Russia_TW.20.a: "なんということだ"
+ TR_Russia_TW.21.t: "この地域の第五列を弾圧"
+ TR_Russia_TW.21.d: ""
+ TR_Russia_TW.21.a: "当然の成果だ"
+ TR_Russia_TW.22.t: "大規模な戦闘に発展"
+ TR_Russia_TW.22.d: ""
+ TR_Russia_TW.22.a: "親衛隊は何をやっていたんだ"
+ TR_Russia_TW.23.t: "火蓋は切って落とされる"
+ TR_Russia_TW.23.d: "ノヴゴロドにて立てこもるデニーキンたちは遂に本格的軍事行動を開始した。奴らはペトログラードに兵を進め新たな皇帝を擁立せんとしている。"
+ TR_Russia_TW.23.a: "全軍を集めろ。これは「叛乱」だ"
+
 
  TR_Russia_TW.201.t: "ノヴゴロド動乱が周辺へ拡大"
  TR_Russia_TW.201.d: "ノヴゴロドで発生した動乱につられて、その周囲におけるデニーキンの信奉者たちは過激な行動を始めている。現在の活動水準では明確な行動を行うには不十分だが、必ずこれを鎮圧する必要がある。"
