--- a/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
@@ -46,4 +46,4 @@
  MAN_autonomy_imperial_dominion: "帝国自治領満州"
  government_general: "総督府"
  autonomy_cleansing_area: "浄化区域"
- country_autonomy_cleansing_area: "[]$autonomy_cleansing_area$"
+ country_autonomy_cleansing_area: "[ROOT.GetAdjective]$autonomy_cleansing_area$"
