オリンピック

--- a/localisation/TR_events/japanese/TR_global_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_global_events_l_japanese.yml
@@ -1,5 +1,9 @@
 ﻿l_japanese:
- TR_news.1.t: "ワルシャワ開放"
- TR_news.2.t: "パリ解放"
- TR_news.2.d: "本日未明、パリより速報だ。赤の聖地とも呼ばれたパリが遂にアルジェ政府軍により解放された。フランス中に広まる相互監視と秘密警察の恐怖に恐れなくても良いと知った全パリ市民は、パリに入った連合軍を歓迎している。"
- TR_news.2.a: "Vive la France !"
+ TR_global_news.1.t: "第11回オリンピック競技会"
+ TR_global_news.1.d: "第11回夏季オリンピック大会が最近ドイツのベルリンで開催された。\n\n世界中から49カ国の選手が参加、1936年夏季オリンピックは限られた地域ながらもテレビ中継が歴史上初めて行われた。ドイツ政権にとってこの大会は、惜しみなく投入されたプロパガンダの意義深い勝利だった。\n\nドイツ選手は33個の金メダルを獲得し、最も多くのメダルを獲た。アメリカはドイツに次ぎ24個を獲得、この内4つはジェシー・オーエンスが獲得し、最も大きな成功を収めた競技者となった。"
+ TR_global_news.1.a: "大会は滞りなく終わった"
+ TR_global_news.1.b: "我々のすばらしい側面を世界に見せ付ける事が出来た"
+ TR_global_news_important.1.t: "ワルシャワ開放"
+ TR_global_news_important.2.t: "パリ解放"
+ TR_global_news_important.2.d: "本日未明、パリより速報だ。赤の聖地とも呼ばれたパリが遂にアルジェ政府軍により解放された。フランス中に広まる相互監視と秘密警察の恐怖に恐れなくても良いと知った全パリ市民は、パリに入った連合軍を歓迎している。"
+ TR_global_news_important.2.a: "Vive la France !"
