--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -121,7 +121,10 @@
  TR_Russia_news.12.d:"イランでは古の帝国が蘇ろうとしている。\nロシア側の軍は完全に敗走を続ける中、意外にも破竹の勢いで進軍しているイラン軍は、途中で古のペルシャ帝国への回帰を宣言した。\nモスクワが燃える前に我々に従え。という強い態度で停戦協定に臨んだペルシャは、コーカサスや中央アジアを割譲させ、最終的には先の大戦争でロシア帝国が得た中東の国家までも移管させた。\nアケネメス朝の復古主義に燃えるペルシャ帝国は、既に他地域の攻撃まで行う準備をしており、これに対しイギリス領インドを持つ英国は深い懸念を示している。"
  TR_Russia_news.12.a:"これが帝国か"
  TR_Russia_news.12.b:"マケドニアを滅ぼさん"
-
+ TR_Russia_news.13.t: "デニーキンの乱"
+ TR_Russia_news.13.d: "先日未明、モスクワより驚くべきニュースがやってきた。もとより帝位継承問題によるロシア国内における守旧派と改革派の対立は知られていたが、まさかそれが武力によるものへと発展するとは誰も予期できなかったであろう。しかしデニーキン元帥の勢力は北部地域に限定されたものであり、この叛乱はすぐに鎮圧されるとの見込みである。"
+ TR_Russia_news.13.a: "我らも方針を見直さなければな"
+ TR_Russia_news.13.b: "世界は一体どうなってしまうんだ？"
 
 
 
