--- a/localisation/TR_events/japanese/TR_SRI_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_SRI_events_l_japanese.yml
@@ -2,7 +2,7 @@
  TR_north_italy.1.t: "波乱の萌芽"
  TR_north_italy.1.d: "ダンヌンツィオの秘書は今日行われる南北問題解決に向けた会議の予定調整のため彼の部屋に向かっていた。手帳で今日の予定を確認しながら少し早歩きで向かい、少し早めに部屋の前に到着した。秘書が扉に向かってノックをした。だがダンヌンツィオからの返事はなかった。もう一度ノックをしようとしたところ、秘書は気づいた。微かにだが血の匂いがすることに。秘書は覚悟を決め、ドアノブに手を伸ばした。不思議と部屋には鍵はかかっていなかった。重いドアノブを回したところ、扉は開いた。不気味な静寂が広がる部屋の中に秘書は一歩、一歩と足を進めた。だがそこにはフィウメを奪い取った英雄の姿はなかった。あるのはただ、赤い色の液体と、人だったものだけだ。\n秘書はしばらく呆然としていた。そこへ、ダンヌンツィオがいつまで立っても会議に来ないことに心配した評議会議員がダンヌンツィオの部屋を訪れた。気がつけば時計の針は何周もしていた。\n\nダンヌンツィオの死は全イタリアに驚愕を与えた。北イタリアの希望が、北イタリアの誇りが、そして南北統一への道は潰えたのである。社会党員曰く、ダンヌンツィオの死は南側の放った刺客によるものであると。ムッソリーニ曰く、折り合いの悪かった社会党による陰謀であると。国内では様々な議論が巻き起こっているが、ただ事実としてあるのはダンヌンツィオが死んだことと、国内に置ける分断が始まったことだけだ。"
  TR_north_italy.1.a: "なんということだ"
- TR_north_italy.2.t: "リソルジメント"
+ TR_north_italy.2.t: "第二次イタリア内戦"
  TR_north_italy.2.d: "一昨年までの平和的統一への流れはどこへ消えてしまったのであろうか。男の死から何もかもが変わってしまった。イタリアにはもはや過激派しかいない。そしてその過激派も内で相争っている。イタリアから自由が奪われてしまえばこの迫りくる赤色の津波は止められなくなるだろう。"
  TR_north_italy.2.a: "自由は死んだ"
  TR_north_italy.3.t: "社会主義の勝利"
