--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -1076,6 +1076,7 @@
  LBV_fascism_party: "キサルピナ統一党"
  LBV_neutrality_party: "王党派"
  PAP_communism_party: "ローマ人民党"
+ PAP_theocracy_party: "カトリック教会"
  PAP_democratic_party: "ローマ共和党"
  PAP_fascism_party: "十字軍"
  PAP_neutrality_party: "教皇支持団体"
