--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -1115,3 +1115,10 @@
  STATE_1113:0 "ヴェスト・タンガニーカ"
  STATE_1114:0 "ムバレ"
  STATE_1115:0 "バチカン市"
+ STATE_1116:0 "バジリカータ"
+ STATE_1117:0 "モリービ"
+ STATE_1118:0 "ウンブリア"
+ STATE_1119:0 "マリケ"
+ STATE_1120:0 "リグーリア"
+ STATE_1121:0 "フリウリ"
+ 
