--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -30,7 +30,7 @@
  democratic_desc: "民主主義政権"
  fascism: "結束主義"
  fascism_noun: "結束主義"
- fascism_desc: "結束主義政権"
+ fascism_desc: "独裁政権"
  conservatism: "保守主義"
  conservatism_noun: "保守主義"
  conservatism_desc: "民主主義政権"
