サンマリノ

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6430,21 +6430,21 @@
  BKN_DEF: "武漢"
  BKN_ADJ: "武漢"
 
- SAN_fascism: "山東帝国"
- SAN_fascism_DEF: "山東帝国"
- SAN_democratic: "山東"
- SAN_democratic_DEF: "山東"
- SAN_neutrality: "山東"
- SAN_neutrality_DEF: "山東"
- SAN_communism: "山東社会主義共和国"
- SAN_communism_DEF: "山東社会主義共和国"
- SAN_fascism_ADJ: "山東"
- SAN_democratic_ADJ: "山東"
- SAN_neutrality_ADJ: "山東"
- SAN_communism_ADJ: "山東"
- SAN: "山東"
- SAN_DEF: "山東"
- SAN_ADJ: "山東"
+ SHA_fascism: "山東帝国"
+ SHA_fascism_DEF: "山東帝国"
+ SHA_democratic: "山東"
+ SHA_democratic_DEF: "山東"
+ SHA_neutrality: "山東"
+ SHA_neutrality_DEF: "山東"
+ SHA_communism: "山東社会主義共和国"
+ SHA_communism_DEF: "山東社会主義共和国"
+ SHA_fascism_ADJ: "山東"
+ SHA_democratic_ADJ: "山東"
+ SHA_neutrality_ADJ: "山東"
+ SHA_communism_ADJ: "山東"
+ SHA: "山東"
+ SHA_DEF: "山東"
+ SHA_ADJ: "山東"
 
  EXC_fascism: "広東"
  EXC_fascism_DEF: "広東"
@@ -6473,3 +6473,6 @@
  EAS: "ドイツ・東アフリカ軍団"
  EAS_DEF: "ドイツ・東アフリカ軍団"
  EAS_ADJ: "ドイツ・東アフリカ軍団"
+
+ SAN:0 "サン・マリノ"
+ SAN_ADJ:0 "サン・マリノ"
