--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6418,8 +6418,8 @@
  BKN_fascism_DEF: "武漢人民国"
  BKN_democratic: "武漢共和国"
  BKN_democratic_DEF: "武漢共和国"
- BKN_neutrality: "武漢臨時政府"
- BKN_neutrality_DEF: "武漢臨時政府"
+ BKN_neutrality: "湖北"
+ BKN_neutrality_DEF: "湖北"
  BKN_communism: "武漢社会主義共和国"
  BKN_communism_DEF: "武漢社会主義共和国"
  BKN_fascism_ADJ: "武漢"
