リヒテンシュタイン公国

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6474,5 +6474,21 @@
  EAS_DEF: "ドイツ・東アフリカ軍団"
  EAS_ADJ: "ドイツ・東アフリカ軍団"
 
- SAN:0 "サン・マリノ"
- SAN_ADJ:0 "サン・マリノ"
+ SAN: "サン・マリノ"
+ SAN_ADJ: "サン・マリノ"
+
+ LHT_fascism: "リヒテンシュタイン国"
+ LHT_fascism_DEF: "リヒテンシュタイン国"
+ LHT_democratic: "リヒテンシュタイン共和国"
+ LHT_democratic_DEF: "リヒテンシュタイン共和国"
+ LHT_neutrality: "リヒテンシュタイン"
+ LHT_neutrality_DEF: "リヒテンシュタイン"
+ LHT_communism: "リヒテンシュタイン・レーテ共和国"
+ LHT_communism_DEF: "リヒテンシュタイン・レーテ共和国"
+ LHT_fascism_ADJ: "リヒテンシュタイン"
+ LHT_democratic_ADJ: "リヒテンシュタイン"
+ LHT_neutrality_ADJ: "リヒテンシュタイン"
+ LHT_communism_ADJ: "リヒテンシュタイン"
+ LHT: "リヒテンシュタイン"
+ LHT_DEF: "リヒテンシュタイン"
+ LHT_ADJ: "リヒテンシュタイン"
