--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -137,8 +137,8 @@
  FRA_ADJ: "フランス"
  FGE_fascism: "ナシオン・フランセーズ"
  FGE_fascism_DEF: "ナシオン・フランセーズ"
- FGE_democratic: "フランス亡命政府"
- FGE_democratic_DEF: "フランス亡命政府"
+ FGE_democratic: "フランス共和国"
+ FGE_democratic_DEF: "フランス共和国"
  FGE_neutrality: "ブルボン・フランス"
  FGE_neutrality_DEF: "ブルボン・フランス"
  FGE_communism: "フランス・コミューン"
@@ -1101,8 +1101,8 @@
  SIK_fascism_DEF: "専制新疆"
  SIK_democratic: "新疆独立共和国"
  SIK_democratic_DEF: "新疆独立共和国"
- SIK_neutrality: "新疆国"
- SIK_neutrality_DEF: "新疆国"
+ SIK_neutrality: "新疆"
+ SIK_neutrality_DEF: "新疆"
  SIK_communism: "新疆"
  SIK_communism_DEF: "新疆"
  SIK_fascism_ADJ: "新疆"
@@ -1878,8 +1878,8 @@
  COG_fascism_DEF: "中央アフリカ帝国"
  COG_democratic: "コンゴ共和国"
  COG_democratic_DEF: "コンゴ共和国"
- COG_neutrality: "コンゴ"
- COG_neutrality_DEF: "コンゴ"
+ COG_neutrality: "コンゴ独立国"
+ COG_neutrality_DEF: "コンゴ独立国"
  COG_communism: "コンゴ民主共和国"
  COG_communism_DEF: "コンゴ民主共和国"
  COG_fascism_ADJ: "コンゴ"
@@ -2399,9 +2399,9 @@
  SUD: "スーダン"
  SUD_DEF: "スーダン"
  SUD_ADJ: "スーダン"
- SUD_ENG_neutrality_subject: "英埃領スーダン"
- SUD_ENG_neutrality_subject_DEF: "英埃領スーダン"
- SUD_ENG_neutrality_subject_ADJ: "英埃領スーダン"
+ SUD_ENG_neutrality_subject: "イギリス・エジプト領スーダン"
+ SUD_ENG_neutrality_subject_DEF: "イギリス・エジプト領スーダン"
+ SUD_ENG_neutrality_subject_ADJ: "イギリス・エジプト領スーダン"
  ERI_fascism: "統一エリトリア"
  ERI_fascism_DEF: "統一エリトリア"
  ERI_democratic: "エリトリア"
