--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -507,14 +507,14 @@ jap_Unemployment_relief_project_expenses: "失業救済事業費"
 jap_Unemployment_relief_project_expenses_desc: ""
 jap_Establishment_of_Social_Policy_Council: "社会政策審議会を設置"
 jap_Establishment_of_Social_Policy_Council_desc: ""
-jap_ST_car: "国産自動車の奨励"
-jap_ST_car_desc: ""
-jap_ST_control_car: "自動車製造事業法"
-jap_ST_control_car_desc: ""
-jap_ST_Important_industry_control_law: "重要産業統制法"
-jap_ST_Important_industry_control_law_desc: ""
-jap_ST_deregulation: "規制緩和"
-jap_ST_deregulation_desc: ""
+jap_RM_car: "国産自動車の奨励"
+jap_RM_car_desc: ""
+jap_RM_control_car: "自動車製造事業法"
+jap_RM_control_car_desc: ""
+jap_RM_Important_industry_control_law: "重要産業統制法"
+jap_RM_Important_industry_control_law_desc: ""
+jap_RM_deregulation: "規制緩和"
+jap_RM_deregulation_desc: ""
 jap_Establishment_of_Japan_Economic_Federation: "日本経済聯盟会の設立"
 jap_Establishment_of_Japan_Economic_Federation_desc: ""
 jap_free_education: "古典的自由主義"
